# rs00

./: Cargo.toml  rustfmt.toml
macro1/: Cargo.toml
macro1/src/: lib.rs
src/: codewars.rs  contral_flow.rs  control_flow.rs  err0.rs  file0.rs  fn0.rs  futrue1.rs  generic0.rs  internal_mut.rs  iter0.rs  lib00.rs  lifetime0.rs  main.rs  scoping.rs  serde0.rs  std0.rs  std_lib.rs  std_ops.rs  struct0.rs  thread0.rs  trait0.rs  trait_generic.rs  unsafe0.rs
src/codewars/: array.rs  number.rs  string0.rs
src/jpgz/: array.rs  mod.rs  stack_queue.rs
src/leet_code/: array.rs  dstdgvhx.rs  linked_list.rs  mod.rs  number.rs  string.rs
src/lib00/: serde0.rs  thiserror0.rs
src/macros/: exemple1.rs  mod.rs  proc1.rs
src/std_lib/: str0.rs
src/trait_generic/: associated_type.rs  hkt1.rs  te_hx_1.rs  te_hx_11.rs
tests/: test1.rs
